...
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Text(l10n.readerTocTitle,
                    style: const TextStyle(fontWeight: FontWeight.bold)),
                IconButton(
                  key: const Key('toc_bottom_sheet_close_button'),
                  icon: const Icon(Icons.close),
                  onPressed: () => Navigator.of(context).pop(),
                ),
              ],
            ),
          );
...
